[CST-97] fix: 추후 헤더 문제 방지를 위한 허용 범위 수정